--- a/Prelim_Exam.ipynb
+++ b/Prelim_Exam.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa+hNiphcHiBXpeX59nPff",
+      "authorship_tag": "ABX9TyNC4lY9XeZasULfkbej80LD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +185,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Question 4. (30 points) Create a matrix whose elements are:"
+        "Question 4. (30 points) Create a matrix whose elements are:\n",
+        "\n",
+        "matrix = np.array([[1, 2, 3, 4],\n",
+        "                   [5, 6, 7, 8],\n",
+        "                   [9, 10, 11, 12]])\n",
+        "\n",
+        "Type a python program that can view the size, shape, and dimension of the matrix above."
       ],
       "metadata": {
         "id": "1bA6VocwzpUd"
@@ -200,19 +206,19 @@
         "                   [9, 10, 11, 12]])\n",
         "print(\"View Matrix:\")\n",
         "print(matrix)\n",
-        "print(\"===============\")\n",
-        "\n",
-        "print(\"The shape of the matrix is,\",matrix.shape)\n",
-        "print(\"The dimension of the matrix is,\",matrix.ndim)\n"
+        "print(\"================================\")\n",
+        "print(\"The size of the matrix is:\",matrix.size)\n",
+        "print(\"The shape of the matrix is:\",matrix.shape)\n",
+        "print(\"The dimension of the matrix is:\",matrix.ndim)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aCFNSOQzvKjF",
-        "outputId": "8b7d4ac3-f270-4991-fb96-737e3334a0d8"
+        "outputId": "720a01ba-acd4-4459-8a58-a66c90cd94b0"
       },
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,9 +228,10 @@
             "[[ 1  2  3  4]\n",
             " [ 5  6  7  8]\n",
             " [ 9 10 11 12]]\n",
-            "===============\n",
-            "The shape of the matrix is, (3, 4)\n",
-            "The dimension of the matrix is, 2\n"
+            "================================\n",
+            "The size of the matrix is: 12\n",
+            "The shape of the matrix is: (3, 4)\n",
+            "The dimension of the matrix is: 2\n"
           ]
         }
       ]
@@ -240,9 +247,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "arrayOne = np.array([[5,6,9],[21,18,27]])\n",
+        "arrayTwo = np.array([[15,33,24],[4,7,1]])\n",
+        "\n",
+        "result_array = np.add(arrayOne,arrayTwo)\n",
+        "print(\"The result when arrayOne + arrayTwo is:\", \"\\n\", result_array)\n",
+        "print(\"===========================================================\")\n",
+        "squared = result_array**2\n",
+        "print(\"The answer when the result array's each element is squared:\", \"\\n\", squared)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kFtHOd3lzq4M",
+        "outputId": "d41065ce-6bf5-4f63-d553-ecb26e6015be"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The result when arrayOne + arrayTwo is: \n",
+            " [[20 39 33]\n",
+            " [25 25 28]]\n",
+            "===========================================================\n",
+            "The answer when the result array's each element is squared: \n",
+            " [[ 400 1521 1089]\n",
+            " [ 625  625  784]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "kFtHOd3lzq4M"
+        "id": "S-EAhzc1013g"
       },
       "execution_count": null,
       "outputs": []
